--- a/app/src/main/res/layout/user_item.xml
+++ b/app/src/main/res/layout/user_item.xml
@@ -1,19 +1,16 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
-    app:cardBackgroundColor="@color/apptheme_light_black"
+    app:cardBackgroundColor="@color/transparent"
     android:layout_margin="8dp"
+    android:layout_marginRight="12dp"
     android:orientation="vertical">
 
  <androidx.constraintlayout.widget.ConstraintLayout
      android:layout_width="wrap_content"
-     android:paddingTop="10dp"
-     android:paddingLeft="15dp"
-     android:paddingRight="15dp"
-     android:paddingBottom="10dp"
      android:layout_height="wrap_content">
 
      <de.hdodenhof.circleimageview.CircleImageView
@@ -33,8 +30,8 @@
          android:layout_height="wrap_content"
          android:text="Prawesh Lamsal"
          android:textColor="@color/whiter"
-         android:textSize="18dp"
-         android:layout_marginTop="10dp"
+         android:textSize="12dp"
+         android:layout_marginTop="4dp"
          android:textStyle="bold"
          app:layout_constraintBottom_toBottomOf="parent"
          app:layout_constraintEnd_toEndOf="parent"
@@ -45,4 +42,4 @@
 
 
 
-</androidx.cardview.widget.CardView>
+</RelativeLayout>
